compiler/testData/diagnostics/testsWithJsStdLib/jvmDeclarations/cloneable.kt
// FIR_IGNORE
// FIR_IDENTICAL
import kotlin.<!UNRESOLVED_REFERENCE!>Cloneable<!>

fun cloneable(): <!UNRESOLVED_REFERENCE!>Cloneable<!> = intArrayOf(42)
